--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,15 @@ hs_err_pid*
 
 .idea/*
 .idea/
+
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
