--- a/ivy.xml
+++ b/ivy.xml
@@ -9,7 +9,10 @@
     <dependencies>
         <dependency org="org.mockito" name="mockito-all" rev="1.9.0" conf="build->default"/>
         <dependency org="junit" name="junit" rev="4.11" conf="build->default"/>
+        <dependency org="com.fasterxml.jackson.core" name="jackson-core" rev="2.9.2"/>
         <dependency org="net.sourceforge.cobertura" name="cobertura" rev="2.1.1" conf="build->default"/>
         <dependency org="pmd" name="pmd" rev="4.3" conf="analysis->default"/>
+        <dependency org="com.fasterxml.jackson.core" name="jackson-databind" rev="2.9.2"/>
+        <dependency org="org.apache.commons" name="commons-configuration2" rev="2.2"/>
     </dependencies>
 </ivy-module>
