Se pasa a usar archivo de conf
Se modifica test para usar la clase Money

--- a/config/config.properties
+++ b/config/config.properties
@@ -5,3 +5,6 @@ minNumberOfTurnsInJail = 1
 bailCost = 45000.0
 
 initPlayerMoney = 100000.0
+
+firstQuini6Increment = 50000.0
+secondQuini6Increment = 30000.0
