Add Players to board

--- a/config/config.properties
+++ b/config/config.properties
@@ -12,4 +12,6 @@ secondQuini6Increment = 30000.0
 board.cells = Salida,Quini 6,Bs.As - Zona Sur, Edesur, Bs.As - Zona Norte,Carcel,Cordoba Sur,\
   Avance Dinamico,Subte,Cordoba Norte,Impuesto del Lujo,Santa Fe,Aysa,Salta Norte,Salta Sur,Policia,Tren,\
   Neuquen,Retroceso Dinamico,Tucuman
+
 boardTotalCells = 20
+maxNumberOfPlayersOnBoard = 3
