--- a/config/config.properties
+++ b/config/config.properties
@@ -3,13 +3,96 @@ maxNumberOfTurnsInJail = 3
 minNumberOfTurnsInJail = 1
 
 bailCost = 45000.0
-
 initPlayerMoney = 100000.0
+maxNumberOfPlayers = 3
 
 firstQuini6Increment = 50000.0
 secondQuini6Increment = 30000.0
 
-maxNumberOfPlayers = 3
+trainSalePrice = 38000.0
+trainDiceMultiplierSingle = 450.0
+trainDiceMultiplierGroup = 800.0
 
+subwaySalePrice = 40000.0
+subwayDiceMultiplierSingle = 600.0
+subwayDiceMultiplierGroup = 1100.0
 
+edesurSalePrice = 35000.0
+edesurDiceMultiplierSingle = 500.0
+edesurDiceMultiplierGroup = 1000.0
 
+aysaSalePrice = 30000.0
+aysaDiceMultiplierSingle = 300.0
+aysaDiceMultiplierGroup = 500.0
+
+bsassurSalePrice = 20000.0
+bsassurHousePrice = 5000.0
+bsassurHotelPrice = 8000.0
+bsassurRentalPrice = 2000.0
+bsassurOneHouseRentalPrice = 3000.0
+bsassurTwoHousesRentalPrice = 3500.0
+bsassurOneHotelRentalPrice = 5000.0
+
+bsasnorteSalePrice = 25000.0
+bsasnorteHousePrice = 5500.0
+bsasnorteHotelPrice = 9000.0
+bsasnorteRentalPrice = 2500.0
+bsasnorteOneHouseRentalPrice = 3500.0
+bsasnorteTwoHousesRentalPrice = 4000.0
+bsasnorteOneHotelRentalPrice = 6000.0
+
+cordobasurSalePrice = 18000.0
+cordobasurHousePrice = 2000.0
+cordobasurHotelPrice = 3000.0
+cordobasurRentalPrice = 1000.0
+cordobasurOneHouseRentalPrice = 1500.0
+cordobasurTwoHousesRentalPrice = 2500.0
+cordobasurOneHotelRentalPrice = 3000.0
+
+cordobanorteSalePrice = 20000.0
+cordobanorteHousePrice = 2200.0
+cordobanorteHotelPrice = 3500.0
+cordobanorteRentalPrice = 1300.0
+cordobanorteOneHouseRentalPrice = 1800.0
+cordobanorteTwoHousesRentalPrice = 2900.0
+cordobanorteOneHotelRentalPrice = 3500.0
+
+saltasurSalePrice = 23000.0
+saltasurHousePrice = 4500.0
+saltasurHotelPrice = 7500.0
+saltasurRentalPrice = 2000.0
+saltasurOneHouseRentalPrice = 3250.0
+saltasurTwoHousesRentalPrice = 3850.0
+saltasurOneHotelRentalPrice = 5500.0
+
+saltanorteSalePrice = 23000.0
+saltanorteHousePrice = 4500.0
+saltanorteHotelPrice = 7500.0
+saltanorteRentalPrice = 2000.0
+saltanorteOneHouseRentalPrice = 3250.0
+saltanorteTwoHousesRentalPrice = 3850.0
+saltanorteOneHotelRentalPrice = 5500.0
+
+santafeSalePrice = 15000.0
+santafeHousePrice = 4000.0
+santafeHotelPrice = 0000.0
+santafeRentalPrice = 1500.0
+santafeOneHouseRentalPrice = 3500.0
+santafeTwoHousesRentalPrice = 0000.0
+santafeOneHotelRentalPrice = 0000.0
+
+neuquenSalePrice = 17000.0
+neuquenHousePrice = 4800.0
+neuquenHotelPrice = 0000.0
+neuquenRentalPrice = 1800.0
+neuquenOneHouseRentalPrice = 3800.0
+neuquenTwoHousesRentalPrice = 0000.0
+neuquenOneHotelRentalPrice = 0000.0
+
+tucumanSalePrice = 25000.0
+tucumanHousePrice = 7000.0
+tucumanHotelPrice = 0000.0
+tucumanRentalPrice = 2500.0
+tucumanOneHouseRentalPrice = 4500.0
+tucumanTwoHousesRentalPrice = 0000.0
+tucumanOneHotelRentalPrice = 0000.0
